@@ -1,14 +1,12 @@
 --- #YAML:1.0
 name:               DateTime-Set
-version:            0.30
+version:            0.31
 abstract:           DateTime set objects
 author:
-    - Flavio S. Glock <fglock@pucrs.br>
+    - Flavio S. Glock <fglock@gmail.com>
 license:            unknown
 distribution_type:  module
 configure_requires:
-    ExtUtils::MakeMaker:  0
-build_requires:
     ExtUtils::MakeMaker:  0
 requires:
     DateTime:       0.12
@@ -18,7 +16,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
